<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diversiones Kavier</string>
    <string name="imgTituloDescription">Imagen de cabecera</string>
    <string name="Boton">Diviertete</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_main_options">MainOptions</string>
    <string name="title_activity_start">Start</string>
    <string name="title_activity_score">Score</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="description">none</string>
    <string name="title_activity_start_next">StartNext</string>
    <string name="title_activity_select_language">SelectLanguage</string>
    <string name="title_activity_intro">Intro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hangman_menu">HangmanMenu</string>

</resources>
