<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:screenOrientation="sensorLandscape"
    tools:context=".StartNext" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/A" />

                <Button
                    android:id="@+id/buttonB"
                   android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/B" />

                <Button
                    android:id="@+id/buttonC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/C" />

                <Button
                    android:id="@+id/buttonD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/D" />

                <Button
                    android:id="@+id/buttonE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/E" />

                <Button
                    android:id="@+id/buttonF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/F" />

                <Button
                    android:id="@+id/buttonG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/G" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/H" />

                <Button
                    android:id="@+id/buttonI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/I" />

                <Button
                    android:id="@+id/buttonJ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/J" />

                <Button
                    android:id="@+id/buttonK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/K" />

                <Button
                    android:id="@+id/buttonL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/L" />

                <Button
                    android:id="@+id/buttonM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/M" />

                <Button
                    android:id="@+id/buttonN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/N" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/O" />

                <Button
                    android:id="@+id/buttonP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/P" />

                <Button
                    android:id="@+id/buttonQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/Q" />

                <Button
                    android:id="@+id/buttonR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/R" />

                <Button
                    android:id="@+id/buttonS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/S" />

                <Button
                    android:id="@+id/buttonT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/T" />

                <Button
                    android:id="@+id/buttonU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/U" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/V" />

                <Button
                    android:id="@+id/buttonW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/W" />

                <Button
                    android:id="@+id/buttonX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/X" />

                <Button
                    android:id="@+id/buttonY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/Y" />

                <Button
                    android:id="@+id/buttonZ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="dissapear"
                    android:text="@string/Z" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView1"
        style="@style/textViewstyle"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_above="@+id/scrollView1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="305dp"
        android:textIsSelectable="false" />

    <ImageView
        android:id="@+id/body"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/description"
        android:src="@drawable/body"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/head"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/description"
        android:src="@drawable/head"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/torso"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/description"
        android:src="@drawable/torso"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/arms"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/description"
        android:src="@drawable/arms"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/category"
        style="@style/titleViewstyle"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="335dp"
        android:textIsSelectable="false" />

</RelativeLayout>